* vertical align fix - well that's just stupid...

--- a/assets/css/style-portum.css
+++ b/assets/css/style-portum.css
@@ -5726,7 +5726,7 @@ input[type='button']:active
 
 @media (min-width: 768px)
 {
-    .ewf-valign--top .row .col-*
+    .ewf-valign--top .container > .row
     {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -5735,9 +5735,11 @@ input[type='button']:active
         -webkit-box-align: start;
         -ms-flex-align: start;
         align-items: flex-start;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
 
-    .ewf-valign--middle .row .col-*
+    .ewf-valign--middle .container > .row
     {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -5746,9 +5748,11 @@ input[type='button']:active
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
 
-    .ewf-valign--bottom .row .col-*
+    .ewf-valign--bottom .row
     {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -5757,6 +5761,8 @@ input[type='button']:active
         -webkit-box-align: end;
         -ms-flex-align: end;
         align-items: flex-end;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
 }
 /* ----------------------- SECTIONS ----- end ------------------------ */
